--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-signin-client_id" content="473669949989-3fkqgfdrn8cjr68qof4looisi5ukmcik.apps.googleusercontent.com">
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
